// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconAttach renders 1`] = `
.emotion-2 {
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  cursor: pointer;
  color: #707070;
  width: 80px;
  height: 49px;
  text-align: center;
  line-height: 49px;
  margin-right: 15px;
  margin-left: -20px;
}

.emotion-0 {
  font-size: 14px;
  vertical-align: middle;
}

.emotion-1 {
  font-size: 12px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  margin-left: 3px;
}

<span
  class="emotion-2"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root emotion-0"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
    />
  </svg>
  <span
    class="emotion-1"
  >
    ICON
  </span>
</span>
`;

exports[`IconClose renders 1`] = `
.emotion-1 {
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  cursor: pointer;
  color: #707070;
  content: "";
  position: absolute;
  right: 0;
  top: 0;
  width: 54px;
  height: 49px;
}

.emotion-1:hover {
  background: #707070;
}

.emotion-1:hover svg {
  color: #fff;
}

.emotion-0 {
  color: #424242;
  cursor: pointer;
  float: right;
  font-size: 32px;
  z-index: 9;
  position: absolute;
  right: 11px;
  top: 8px;
}

<span
  class="emotion-1"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root emotion-0"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
    />
  </svg>
</span>
`;

exports[`IconDelete renders 1`] = `
.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  cursor: pointer;
  color: #707070;
}

<span
  class="emotion-0"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
    />
  </svg>
</span>
`;

exports[`IconEdit renders 1`] = `
.emotion-1 {
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  cursor: pointer;
  color: #707070;
}

.emotion-0 {
  color: #0072CE;
  font-size: 21px;
  position: absolute;
  right: 3px;
}

<span
  class="emotion-1"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root emotion-0"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
    />
  </svg>
</span>
`;

exports[`IconInsertChart renders 1`] = `
.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  cursor: pointer;
  color: #707070;
}

<span
  class="emotion-0"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
    />
  </svg>
</span>
`;

exports[`IconInvisible renders 1`] = `
.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  cursor: pointer;
  color: #707070;
}

<span
  class="emotion-0"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="m0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
    />
  </svg>
</span>
`;

exports[`IconLibraryAdd renders 1`] = `
.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  cursor: pointer;
  color: #707070;
}

<span
  class="emotion-0"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9h-4v4h-2v-4H9V9h4V5h2v4h4v2z"
    />
  </svg>
</span>
`;

exports[`IconPowerSettings renders 1`] = `
.emotion-1 {
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  cursor: pointer;
  color: #707070;
}

.emotion-0 {
  color: #FFF;
  background-color: #707070;
  border-radius: 50%;
  padding: 3px;
  font-size: 15px;
}

<span
  class="emotion-1"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root emotion-0"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
    />
  </svg>
</span>
`;

exports[`IconPowerSettings renders 2`] = `
.emotion-1 {
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  cursor: pointer;
  color: #707070;
  display: inline-block;
  vertical-align: middle;
  height: 23px;
  width: 23px;
  position: relative;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 2px;
  height: 30px;
  background: #7f7f7f;
  -webkit-transform: rotate(140deg);
  -ms-transform: rotate(140deg);
  transform: rotate(140deg);
  left: 9px;
  top: -2px;
  z-index: 1;
}

.emotion-1::before {
  content: '';
  position: absolute;
  width: 4px;
  height: 30px;
  background: #fff;
  -webkit-transform: rotate(140deg);
  -ms-transform: rotate(140deg);
  transform: rotate(140deg);
  left: 9px;
  top: -3px;
  z-index: 1;
}

.emotion-0 {
  color: #fff;
  cursor: pointer;
  background-color: #707070;
  border-radius: 50%;
  font-size: 15px;
  padding: 3px;
}

<span
  class="emotion-1"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root emotion-0"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
    />
  </svg>
</span>
`;

exports[`IconVisible renders 1`] = `
.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  cursor: pointer;
  color: #707070;
}

<span
  class="emotion-0"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
    />
  </svg>
</span>
`;
